# RG_VEZBE

1_1_Hello_Window/: CMakeLists.txt  main.cpp
2_1_Shaders/: CMakeLists.txt  komentar.txt  main.cpp
2_1_Shaders/libs/glad/include/glad/: glad.h
2_1_Shaders/libs/glad/src/: glad.c
2_2_Shaders_Updated/: CMakeLists.txt  Shader.cpp  fragmentShader.fs  main.cpp  vertexShader.vs
2_2_Shaders_Updated/include/: Shader.h
